opam-version: "2.0"
maintainer: "John Else <john.else@gmail.com>"
homepage: "https://github.com/johnelse/tabler"
bug-reports: "https://github.com/johnelse/tabler/issues"
dev-repo: "git+https://github.com/johnelse/tabler"
license: "MIT"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "2.0"}
  "cmdliner" {>= "1.1.0"}
  "mm" {>= "0.8.0"}
  "result"
  "ounit" {with-test}
]
synopsis: "CLI program for generating wavetables"
description: """
Generate wavetables that interpolate between defined waveforms."""
authors: "John Else <john.else@gmail.com>"
